--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Adult</title>
+  <title>Pussy Factory</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href{="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <meta name="hubtraffic-domain-validation"  content="c04f6c3008fe0e78" />
-
-  <!-- <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
-  <script
-    src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous"></script>
-  <script src="/semantic/dist/semantic.min.js"></script> -->
-
-</head>
+</head>{
 <body>
   <app-root></app-root>
 </body>
